change posgtres images to arm